# repodcast

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-container.yml
remotion/: package-lock.json  package.json
remotion/src/: root.tsx  style.css  video.tsx
src/: cli.py  settings.py
src/ai/: bedrock_client.py  fake_client.py  prompts.py
src/application/: build_video.py
src/audio/: fake_polly_client.py  polly_client.py  renderer.py
src/domain/: episode.py  repository.py  slide.py  subtitle.py
src/repo/: scanner.py  source.py
src/subtitles/: __init__.py  srt.py  vtt.py
src/ui/: __init__.py  build_dashboard.py
src/video/: remotion.py
tests/: test_audio_renderer.py  test_bedrock_client.py  test_episode_model.py  test_fake_build.py  test_polly_ssml.py  test_prompts.py  test_remotion_renderer.py  test_repository_source.py  test_scanner.py  test_settings.py  test_subtitles.py
