[project]
name = "repodcast"
version = "0.1.0"
description = "Turn a source repository into a narrated technical video"
authors = [
    {name = "Gonzalo Ayuso",email = "gonzalo123@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35",
    "click>=8.1",
    "gitpython>=3.1",
    "pathspec>=0.12",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "rich>=14.0",
    "rich-click>=1.9",
]

[project.scripts]
repodcast = "src.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3"
pytest-cov = ">=6.0"
ruff = ">=0.9"
mypy = ">=1.14"

[tool.poetry]
packages = [{include = "src"}]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
